[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Sounds/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Sounds/MusicChannel.gd" type="Script" id=2]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Song1" type="AudioStreamPlayer" parent="."]
bus = "Songs"
script = ExtResource( 2 )

[node name="FadeIn" type="Tween" parent="Song1"]

[node name="FadeOut" type="Tween" parent="Song1"]

[node name="Metronome" type="Timer" parent="."]

[node name="EndMusic" type="Timer" parent="."]
one_shot = true

[node name="Song2" type="AudioStreamPlayer" parent="."]
bus = "Songs"
script = ExtResource( 2 )

[node name="FadeIn" type="Tween" parent="Song2"]

[node name="FadeOut" type="Tween" parent="Song2"]
